objects/ALTF__Powerpoint_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Use this custom setting to specify what information is included in PowerPoint files generated by Altify.</description>
    <fields>
        <fullName>ALTF__AM_Add_Objectives__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this setting is enabled, objectives data can be included in account manager plan Powerpoint exports, except when the Objectives tab is disabled in the relevant Plan Type.</description>
        <inlineHelpText>When this setting is enabled, objectives data can be included in account plan Powerpoint exports, except when the Objectives tab is disabled in the relevant Plan Type.</inlineHelpText>
        <label>AM Add Objectives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__AM_Add_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this setting is enabled, opportunity data can be included in account manager plan Powerpoint exports.</description>
        <inlineHelpText>When this setting is enabled, opportunity data can be included in account plan Powerpoint exports.</inlineHelpText>
        <label>AM Add Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__AM_Add_Opportunity_Map__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this setting is enabled, opportunity map data can be included in account manager plan Powerpoint exports.</description>
        <inlineHelpText>When this setting is enabled, opportunity map data can be included in account plan Powerpoint exports.</inlineHelpText>
        <label>AM Add Opportunity Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__AM_Add_Org_Chart_Detail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select this checkbox to enable relationship detail to be listed in a PowerPoint export from Account Manager.</description>
        <inlineHelpText>Select this checkbox to enable relationship detail to be listed in a PowerPoint export from Account Manager.</inlineHelpText>
        <label>AM Add Relationship Map Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__AM_Add_Org_Chart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to enable the relationship map structure to be shown in a PowerPoint export from Account Manager.</description>
        <inlineHelpText>Select this checkbox to enable the relationship map structure to be shown in a PowerPoint export from Account Manager.</inlineHelpText>
        <label>AM Add Relationship Map Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__AM_Add_Overview__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include overview data from Account Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include overview data from Account Manager in the PowerPoint file.</inlineHelpText>
        <label>AM Add Overview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__AM_Add_Plan_Details__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this setting is enabled, plan details data can be included in account manager plan Powerpoint exports, except when the Plan Details tab is disabled in the relevant Plan Type.</description>
        <inlineHelpText>When this setting is enabled, plan details data can be included in account plan Powerpoint exports, except when the Plan Details tab is disabled in the relevant Plan Type.</inlineHelpText>
        <label>AM Add Plan Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__AM_Add_Strategy_Map__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this setting is enabled, insight map data can be included in account manager plan Powerpoint exports.</description>
        <inlineHelpText>When this setting is enabled, insight map data can be included in account plan Powerpoint exports.</inlineHelpText>
        <label>AM Add Insight Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__AM_Add_TandI__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include T&amp;I data from Account Manager in the Powerpoint file.</description>
        <inlineHelpText>Select this checkbox to include Test &amp; Improve information from Account Manager in the Powerpoint file.</inlineHelpText>
        <label>AM Add TandI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Add_Relationships_Detail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select this checkbox to enable relationship detail to be listed in a PowerPoint export from Opportunity Manager.</description>
        <inlineHelpText>Select this checkbox to enable relationship detail to be listed in a PowerPoint export from Opportunity Manager.</inlineHelpText>
        <label>OM Add Relationship Map Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Add_Relationships__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to enable the relationship map structure to be shown in a PowerPoint export from Opportunity Manager.</description>
        <inlineHelpText>Select this checkbox to enable the relationship map structure to be shown in a PowerPoint export from Opportunity Manager.</inlineHelpText>
        <label>OM Add Relationship Map Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Add_Sales_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to include Sales Process data from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include Sales Process data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Sales Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Enable_PPTX_Lightning_Popups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable PPTX Lightning Popups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Link_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use this field to show or hide the export to PowerPoint link in a layout.</description>
        <inlineHelpText>Use this field to show or hide the export to PowerPoint link in a layout.</inlineHelpText>
        <label>Link Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__OM_Add_Assessment_Notes__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include assessment notes from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include assessment notes from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Assessment Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__OM_Add_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to include assessment data from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include assessment data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__OM_Add_Competitive_Strategy__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include competitive strategy data from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include competitive strategy data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Competitive Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__OM_Add_Competitors__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include competitor data from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include competitor data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Competitors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__OM_Add_Insight_Maps__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include insight data from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include insight data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Insight Maps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__OM_Add_Overview__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include overview data from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include overview data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Overview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__OM_Add_Prime_Actions__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include Prime actions from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include Prime actions from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Prime Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__OM_Add_TandI__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include T&amp;I data from Smart Opportunity Manager in the Powerpoint file.</description>
        <inlineHelpText>Select this checkbox to include Test &amp; Improve information from Opportunity Manager in the Powerpoint file.</inlineHelpText>
        <label>OM Add T&amp;I</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Remove_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to remove logo from slides</inlineHelpText>
        <label>Remove Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Slide_Background_Color__c</fullName>
        <inlineHelpText>Background color of PPT slides in hexadecimal</inlineHelpText>
        <label>Slide Background Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Slide_Body_Font_Color__c</fullName>
        <inlineHelpText>Font color of slides body text in hexadecimal</inlineHelpText>
        <label>Slide Body Font Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Slide_Bullet_Color__c</fullName>
        <description>Color of bullet points in slides in hexadecimal</description>
        <label>Slide Bullet Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Slide_Header_Font_Color__c</fullName>
        <inlineHelpText>Font color of slide headers in slides in hexadecimal</inlineHelpText>
        <label>Slide Header Font Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Slide_Subtitle_Font_Color__c</fullName>
        <inlineHelpText>Font color of cover slide subtitle in hexadecimal</inlineHelpText>
        <label>Slide Subtitle Font Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Slide_Table_Border_Color__c</fullName>
        <inlineHelpText>Border color of tables in slides in hexadecimal</inlineHelpText>
        <label>Slide Table Border Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Slide_Table_Even_Row_Background_Color__c</fullName>
        <inlineHelpText>Background color of even table rows in slides in hexadecimal</inlineHelpText>
        <label>Slide Table Even Row Background Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Slide_Table_Header_Background_Color__c</fullName>
        <inlineHelpText>Background color of table headers in slides in hexadecimal</inlineHelpText>
        <label>Slide Table Header Background Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Slide_Table_Header_Font_Color__c</fullName>
        <inlineHelpText>Font color of table headers in slides in hexadecimal</inlineHelpText>
        <label>Slide Table Header Font Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Slide_Table_Odd_Row_Background_Color__c</fullName>
        <description>Background color of odd table rows in slides in hexadecimal</description>
        <label>Slide Table Odd Row Background Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Slide_Table_Row_Font_Color__c</fullName>
        <inlineHelpText>Font color of table rows in slides in hexadecimal</inlineHelpText>
        <label>Slide Table Row Font Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Slide_Title_Font_Color__c</fullName>
        <inlineHelpText>Font color of cover slide title in hexadecimal</inlineHelpText>
        <label>Slide Title Font Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Altify Powerpoint Settings</label>
</CustomObject>